# kiko

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  docker-compose.netlab.yml  vcpkg.json
.github/workflows/: ci-full.yml  ci.yml  installer-smoke.yml  netlab.yml  release.yml
cmake/triplets/: arm64-android-termux.cmake
docker/netlab/: Dockerfile  netlab-endpoint.sh  netlab-nat.sh
docs/: ARCHITECTURE.md  PLAN.md  test-scenarios.md
scripts/: check_linux_abi.sh  install.ps1  install.sh  netlab_double_nat.sh  netlab_matrix.sh  pair_timeout_smoke.py  relay_transfer_smoke.py  relayd_smoke.py  tui_smoke.py  web_browser_smoke.py  web_note_smoke.py  web_smoke.py  web_termux_lifecycle_smoke.py
src/: adaptive.cpp  adaptive.hpp  ai_advisor.cpp  ai_advisor.hpp  ai_client.cpp  ai_client.hpp  cancellation.cpp  cancellation.hpp  clipboard.cpp  clipboard.hpp  common.cpp  common.hpp  compression.cpp  compression.hpp  config.hpp  connectivity.cpp  connectivity.hpp  connectivity_session.cpp  connectivity_session.hpp  crypto.cpp  crypto.hpp  direct_session.cpp  direct_session.hpp  discovery.cpp  discovery.hpp  doctor.cpp  doctor.hpp  file_manifest.cpp  file_metadata.cpp  file_metadata.hpp  gitignore.cpp  gitignore.hpp  imohash.cpp  lan_upgrade.cpp  lan_upgrade.hpp  main.cpp  mux_receive_session.cpp  mux_receive_session.hpp  mux_send_scheduler.cpp  mux_send_scheduler.hpp  (+75 more)
src/app/: main.cpp  relayd_main.cpp
src/connect/: connectivity.cpp  connectivity.hpp  connectivity_session.cpp  connectivity_session.hpp  direct_session.cpp  direct_session.hpp  discovery.cpp  discovery.hpp  encrypted_session.cpp  encrypted_session.hpp  lan_upgrade.cpp  lan_upgrade.hpp  peer_options.hpp  peer_route_session.cpp  peer_route_session.hpp  peer_session.cpp  peer_session.hpp  profile.cpp  profile.hpp  rendezvous_session.cpp  rendezvous_session.hpp  route_planner.cpp  route_planner.hpp  route_session.cpp  route_session.hpp  udp_punch.cpp  udp_punch.hpp
src/core/: adaptive.cpp  adaptive.hpp  cancellation.cpp  cancellation.hpp  common.cpp  common.hpp  compression.cpp  compression.hpp  crypto.cpp  crypto.hpp  imohash.cpp  imohash.hpp  io.cpp  io.hpp  network_interfaces.cpp  network_interfaces.hpp  pake.cpp  pake.hpp  progress.cpp  progress.hpp  progress_state.cpp  progress_state.hpp  protocol.cpp  protocol.hpp  proxy.cpp  proxy.hpp  qrcode_print.cpp  qrcode_print.hpp  socket.cpp  socket.hpp  wordlist.hpp
src/diagnostics/: ai_advisor.cpp  ai_advisor.hpp  ai_client.cpp  doctor.cpp  doctor.hpp  network_probe.cpp  network_probe.hpp  outbound_policy.cpp  outbound_policy.hpp
src/net/: io.cpp  io.hpp  socket.cpp
src/note/: note_protocol.cpp  note_protocol.hpp  note_session.cpp  note_session.hpp  note_workspace.cpp  note_workspace.hpp  notepad.cpp  notepad.hpp
src/platform/: clipboard.cpp  native_picker.cpp  native_picker.hpp  path_browser.cpp  path_browser.hpp  platform.hpp  user_config.cpp  user_config.hpp
src/relay/: relay.cpp  relay.hpp  relay_protocol.cpp  relay_protocol.hpp  relay_race.cpp  relay_race.hpp  relay_room_state.cpp  relay_room_state.hpp  relay_route_state.cpp  relay_route_state.hpp  relay_server.cpp  relay_server.hpp  relay_session.cpp  relay_session.hpp
src/transfer/: file_manifest.cpp  file_metadata.cpp  file_metadata.hpp  gitignore.cpp  mux_receive_session.cpp  mux_receive_session.hpp  mux_send_scheduler.cpp  mux_send_scheduler.hpp  mux_transfer.cpp  receive_plan.cpp  receive_plan.hpp  transfer.cpp  transfer.hpp  transfer_file_session.cpp  transfer_file_session.hpp  transfer_heuristics.cpp  transfer_heuristics.hpp  transfer_manifest.cpp  transfer_manifest.hpp  transfer_receive_paths.cpp  transfer_receive_paths.hpp  transfer_resume.cpp  transfer_resume.hpp  transfer_retry.cpp  transfer_retry.hpp  transfer_stream.cpp  transfer_stream.hpp
src/tui/: tui.cpp  tui.hpp  tui_advanced.cpp  tui_advanced.hpp  tui_browser.cpp  tui_browser.hpp  tui_doctor_modal.cpp  tui_doctor_modal.hpp  tui_failure_hint.cpp  tui_failure_hint.hpp  tui_menu_state.cpp  tui_menu_state.hpp  tui_menu_view.cpp  tui_menu_view.hpp  tui_native_picker.cpp  tui_native_picker.hpp  tui_note.cpp  tui_note.hpp  tui_session.cpp  tui_session.hpp  tui_transfer_actions.cpp  tui_transfer_actions.hpp  tui_transfer_config.hpp  tui_transfer_spec.hpp  tui_transfer_view.cpp  tui_transfer_view.hpp
src/web/: web.cpp  web.hpp  web_assets.cpp  web_assets.hpp  web_job.cpp  web_job.hpp  web_upload.cpp  web_upload.hpp
tests/: adaptive_test.cpp  ai_test.cpp  cancellation_test.cpp  common_test.cpp  connectivity_test.cpp  doctor_test.cpp  handshake_test.cpp  install_script_test.sh  mux_test.cpp  native_picker_test.cpp  network_interfaces_test.cpp  note_protocol_test.cpp  note_workspace_test.cpp  outbound_policy_test.cpp  path_browser_test.cpp  peer_session_test.cpp  profile_test.cpp  progress_state_test.cpp  progress_test.cpp  relay_protocol_test.cpp  relay_room_state_test.cpp  relay_route_state_test.cpp  relay_test.cpp  route_scenarios_test.cpp  route_session_test.cpp  transfer_heuristics_test.cpp  transfer_retry_test.cpp  transfer_test.cpp  tui_advanced_test.cpp  tui_browser_test.cpp  tui_failure_hint_test.cpp  tui_menu_state_test.cpp  tui_menu_view_test.cpp  tui_session_test.cpp  udp_punch_test.cpp  user_config_test.cpp  web_job_test.cpp  web_test.cpp  web_upload_test.cpp
